# Paimbnails

./: .gitignore  CMakeLists.txt  README.md  about.md  changelog.md  mod.json  post.md  support.md
.github/workflows/: build.yml
installer/: README.md  build_installer.bat  installer.nsi  installer_auto.nsi  installer_download.nsi  installer_final.nsi
installer/linux/: install.sh
installer/mac/: install.sh
resources/shaders/: blur_vertex.glsl  kawase_cell.glsl  kawase_down.glsl  kawase_realtime.glsl  kawase_up.glsl  yuv_fragment.glsl  yuv_vertex.glsl
src/: main.cpp
src/blur/: BlurSystem.cpp  BlurSystem.hpp
src/core/: Bootstrap.cpp  DebugSettings.cpp  FrameworkInit.cpp  MaintenanceActions.cpp  QualityConfig.hpp  RuntimeLifecycle.cpp  RuntimeLifecycle.hpp  Settings.hpp  UIConstants.hpp
src/features/audio/services/: AudioContextCoordinator.cpp  AudioContextCoordinator.hpp  PaimonAudio.cpp  PaimonAudio.hpp
src/features/backgrounds/services/: LayerBackgroundManager.cpp  LayerBackgroundManager.hpp
src/features/backgrounds/ui/: BackgroundConfigPopup.cpp  BackgroundConfigPopup.hpp  SameAsPickerPopup.cpp  SameAsPickerPopup.hpp  VideoSettingsPopup.cpp  VideoSettingsPopup.hpp
src/features/badges/hooks/: BadgeHooks.cpp
src/features/badges/services/: BadgeCache.hpp
src/features/capture/services/: FramebufferCapture.cpp  FramebufferCapture.hpp
src/features/capture/ui/: CaptureAssetBrowserPopup.cpp  CaptureAssetBrowserPopup.hpp  CaptureLayerEditorPopup.cpp  CaptureLayerEditorPopup.hpp  CapturePreviewPopup.cpp  CapturePreviewPopup.hpp  CaptureUIConstants.hpp
src/features/community/ui/: CommunityHubLayer.cpp  CommunityHubLayer.hpp  LeaderboardHistoryLayer.cpp  LeaderboardHistoryLayer.hpp  LeaderboardLayer.cpp  LeaderboardLayer.hpp
src/features/cursor/hooks/: CursorHook.cpp  CursorHook.hpp
src/features/cursor/services/: CursorManager.cpp  CursorManager.hpp
src/features/cursor/ui/: CursorConfigPopup.cpp  CursorConfigPopup.hpp
src/features/dynamic-songs/services/: DynamicSongManager.cpp  DynamicSongManager.hpp
src/features/emotes/: EmoteRenderer.cpp  EmoteRenderer.hpp
src/features/emotes/models/: EmoteModels.hpp
src/features/emotes/services/: EmoteCache.cpp  EmoteCache.hpp  EmoteService.cpp  EmoteService.hpp
src/features/emotes/ui/: EmoteAutocomplete.cpp  EmoteAutocomplete.hpp  EmoteButton.cpp  (+3 more)
src/features/fonts/: FontTag.cpp  FontTag.hpp
src/framework/: EventBus.hpp  FeatureRegistry.hpp  FeatureSpec.hpp  HookInterceptor.hpp  ModEvents.hpp  PermissionPolicy.cpp  PermissionPolicy.hpp
src/framework/compat/: ModCompat.hpp  SceneLocators.hpp
src/framework/net/: AsyncHttp.hpp  HttpTransport.hpp
src/framework/state/: SessionState.hpp
src/framework/ui/: PaimonButton.hpp  UIHelpers.hpp
src/hooks/: CCEGLView.cpp  CreatorLayer.cpp  CustomListViewHook.cpp  CustomSongWidget.cpp  DailyLevelNode.cpp  DynamicPopupHook.cpp  EndLevelLayer.cpp  GJGarageLayer.cpp  GJLevelScoreCell.cpp  GJScoreCell.cpp  GameLevelManagerHook.cpp  GauntletLayer.cpp  InfoLayer.cpp  LeaderboardsLayer.cpp  LevelAreaInnerLayer.cpp  LevelCell.cpp  LevelCellContext.hpp  LevelInfoLayer.cpp  LevelLeaderboard.cpp  LevelListCell.cpp  LevelListLayer.cpp  LevelPage.cpp  LevelSearchLayer.cpp  LevelSelectLayer.cpp  MapPackCell.cpp  MenuItemScaleFix.cpp  MenuLayer.cpp  MyLevelsLayoutHook.cpp  PauseLayer.cpp  PlayLayer.cpp  ProfilePage.cpp  ShareCommentLayer.cpp  ShareCommentLayerSmartEnter.cpp  SmartEnterInputHook.cpp  SupportButtonHook.cpp  TransparentListHook.cpp
src/layers/: ButtonEditOverlay.cpp  ButtonEditOverlay.hpp  PaiConfigLayer.cpp  PaiConfigLayer.hpp  PaimonHubLayer.cpp  PaimonHubLayer.hpp  PaimonInfoPopup.cpp  PaimonInfoPopup.hpp  PaimonSupportLayer.cpp  PaimonSupportLayer.hpp
src/managers/: ButtonLayoutManager.cpp  ButtonLayoutManager.hpp  ThumbnailAPI.cpp  ThumbnailAPI.hpp
src/utils/: AccountVerifier.hpp  AnimatedGIFSprite.cpp  AnimatedGIFSprite.hpp  Assets.cpp  Assets.hpp  AudioInterop.hpp  BetaUploadWarning.cpp  BetaUploadWarning.hpp  CommentTextSelector.cpp  CommentTextSelector.hpp  Constants.hpp  Debug.hpp  DominantColors.cpp  DominantColors.hpp  DynamicPopupRegistry.hpp  FileDialog.cpp  FileDialog.hpp  GIFDecoder.cpp  GIFDecoder.hpp  HttpClient.cpp  HttpClient.hpp  ImageConverter.cpp  ImageConverter.hpp  ImageLoadHelper.hpp  InfoButton.cpp  InfoButton.hpp  ListThumbnailCarousel.cpp  ListThumbnailCarousel.hpp  LocalAssetStore.cpp  LocalAssetStore.hpp  Localization.hpp  MainThreadDelay.hpp  ModProfileCache.hpp  PaimonButtonHighlighter.hpp  PaimonDrawNode.hpp  PaimonFormat.cpp  PaimonFormat.hpp  PaimonLoadingOverlay.cpp  PaimonLoadingOverlay.hpp  PaimonNotification.hpp  (+19 more)
src/video/: AudioExtractor.cpp  AudioExtractor.hpp  PBOUploader.cpp  PBOUploader.hpp  VideoDecoder.cpp  VideoDecoder.hpp  VideoDiskCache.cpp  VideoDiskCache.hpp  VideoNormalizer.hpp  VideoPlayer.cpp  VideoPlayer.hpp
src/video/platform/: DecoderAVF.hpp  DecoderAVF.mm  DecoderMF.cpp  DecoderMF.hpp  DecoderNDK.cpp  DecoderNDK.hpp  DecoderPLM.hpp
(+160 files in other folders)
